--- a/requirements.txt
+++ b/requirements.txt
@@ -3,29 +3,30 @@ anyio==3.7.1
 certifi==2023.7.22
 click==8.1.6
 colorama==0.4.6
-cycler==0.12.1
-dnspython==2.4.2
-email-validator==2.0.0.post2
+colorama
+cycler
+dnspython
+email-validator
 fastapi==0.101.0
-fonttools==4.43.1
-h11==0.14.0
-httpcore==0.17.3
-httptools==0.6.0
-httpx==0.24.1
-idna==3.4
-itsdangerous==2.1.2
-Jinja2==3.1.2
+fonttools
+h11
+httpcore
+httptools
+httpx
+idna
+itsdangerous
+Jinja2
 joblib==1.3.2
-kiwisolver==1.4.5
-MarkupSafe==2.1.3
+kiwisolver
+MarkupSafe
 matplotlib==3.8.0
 numpy==1.25.2
-orjson==3.9.4
-packaging==23.2
+orjson
+packaging
 pandas==2.0.3
-Pillow==10.1.0
+Pillow
 pydantic==2.1.1
-pydantic-extra-types==2.0.0
+pydantic-extra-types
 pydantic-settings==2.0.2
 pydantic_core==2.4.0
 pyparsing==3.1.1
@@ -36,13 +37,13 @@ pytz==2023.3
 PyYAML==6.0.1
 scikit-learn==1.2.2
 scipy==1.11.1
-six==1.16.0
-sniffio==1.3.0
-starlette==0.27.0
-threadpoolctl==3.2.0
+six
+sniffio
+starlette
+threadpoolctl
 typing_extensions==4.7.1
-tzdata==2023.3
-ujson==5.8.0
-uvicorn==0.23.2
-watchfiles==0.19.0
-websockets==11.0.3
+tzdata
+ujson
+uvicorn
+watchfiles
+websockets
