--- a/requirements.txt
+++ b/requirements.txt
@@ -20,10 +20,10 @@ joblib==1.3.2
 kiwisolver
 MarkupSafe
 matplotlib
-numpy==1.25.2
+numpy
 orjson
 packaging
-pandas==2.0.3
+pandas
 Pillow
 pydantic==2.1.1
 pydantic-extra-types
