--- a/requirements.txt
+++ b/requirements.txt
@@ -31,10 +31,10 @@ pydantic-settings==2.0.2
 pydantic_core==2.4.0
 pyparsing==3.1.1
 python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-multipart==0.0.6
-pytz==2023.3
-PyYAML==6.0.1
+python-dotenv
+python-multipart
+pytz
+PyYAML
 scikit-learn==1.2.2
 scipy==1.11.1
 six
