--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-annotated-types==0.5.0
-anyio==3.7.1
-certifi==2023.7.22
-click==8.1.6
-colorama==0.4.6
+annotated-types
+anyio
+certifi
+click
+colorama
 contourpy
 cycler
 dnspython
 email-validator
-fastapi==0.101.0
+fastapi
 fonttools
 h11
 httpcore
@@ -16,7 +16,7 @@ httpx
 idna
 itsdangerous
 Jinja2
-joblib==1.3.2
+joblib
 kiwisolver
 MarkupSafe
 matplotlib
@@ -25,23 +25,23 @@ orjson
 packaging
 pandas
 Pillow
-pydantic==2.1.1
+pydantic
 pydantic-extra-types
-pydantic-settings==2.0.2
-pydantic_core==2.4.0
-pyparsing==3.1.1
-python-dateutil==2.8.2
+pydantic-settings
+pydantic_core
+pyparsing
+python-dateutil
 python-dotenv
 python-multipart
 pytz
 PyYAML
-scikit-learn==1.2.2
-scipy==1.11.1
+scikit-learn
+scipy
 six
 sniffio
 starlette
 threadpoolctl
-typing_extensions==4.7.1
+typing_extensions
 tzdata
 ujson
 uvicorn
